--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "html-to-docx": "^1.8.0",
     "puppeteer": "^24.26.1"
   }
 }
