--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "html-to-docx": "^1.8.0",
-    "puppeteer": "^24.26.1"
+    "puppeteer": "^24.26.1",
+    "turndown": "^7.2.2"
   }
 }
