--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^5.1.0",
     "html-to-docx": "^1.8.0",
     "puppeteer": "^24.26.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "turndown": "^7.2.2"
   }
 }
